fix: random crash https://mclo.gs/mBon9DI most likely caused by java version mis-match wasn't able to really reproduce the crash on my own though so /shrug